# open-meteo-mcp-rust

./: .dockerignore  .env.example  .env.production  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PHASE4_STATUS.md  PHASES_1_3_TEST_IMPLEMENTATION.md  PHASE_STATUS.md  README.md  claude-desktop.json  docker-compose.yml  open-meteo-mcp-comparisons.code-workspace
.github/workflows/: ci.yml
spec/: ADR_COMPENDIUM.md
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  server.rs  service.rs
src/client/: air_quality.rs  archive.rs  geocoding.rs  marine.rs  mod.rs  weather.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/tools/: air_quality.rs  alerts.rs  astronomy.rs  comfort.rs  comparison.rs  historical.rs  location.rs  location_swiss.rs  marine.rs  mod.rs  snow.rs  weather.rs
src/transport/: mod.rs  sse.rs  stdio.rs
src/types/: air_quality.rs  alerts.rs  astronomy.rs  comfort.rs  comparison.rs  location.rs  marine.rs  mod.rs  snow.rs  weather.rs
tests/: integration_test.rs  lib.rs  service_config_test.rs  service_core_test.rs  service_error_test.rs  tools_air_quality_handler.rs  tools_alerts_handler.rs  tools_astronomy_handler.rs  tools_comfort_handler.rs  tools_comparison_handler.rs  tools_historical_handler.rs  tools_integration_test.rs  tools_location_handler.rs  tools_marine_handler.rs  tools_ping_handler.rs  tools_snow_handler.rs  tools_swiss_location_handler.rs  tools_weather_handler.rs  utils.rs
tests/client/: location_client_test.rs  weather_client_test.rs
tests/fixtures/: air_quality_response.json  geocode_response.json  location_response.json  weather_response.json
tests/tools/: air_quality_handler_test.rs  location_handler_test.rs  snow_handler_test.rs  (+1 more)
(+3 files in other folders)
